@@ -1,3 +1,14 @@
+2002-08-25 Pierre Humblet <Pierre.Humblet@ieee.org>
+
+	* sec_acl.cc (getacl): Check ace_sid == well_known_world_sid
+	before owner_sid and group_sid so that well_known_world_sid
+	means "other" even when owner_sid and/or group_sid are Everyone.
+	* security.cc (get_attribute_from_acl): Created from code common
+	to get_nt_attribute() and get_nt_object_attribute(), with same
+	reordering as in getacl() above.
+	(get_nt_attribute): Call get_attribute_from_acl().
+	(get_nt_object_attribute): Ditto.
+
 2002-08-26  Christopher Faylor  <cgf@redhat.com>
 
 	* Makefile.in (cygcheck.exe): Make a -mno-cygwin program.
